fix: collapsed case rows shouldn't show index menu [PT-187986400] (#1364)
* fix: collapsed case rows don't show index menu

* chore: improve test coverage

--- a/v3/src/components/case-table/case-table.scss
+++ b/v3/src/components/case-table/case-table.scss
@@ -259,7 +259,8 @@ $table-body-font-size: 8pt;
           justify-content: center;
 
           &.collapsed {
-            text-align: left
+            margin-left: 4px;
+            justify-content: flex-start;
           }
 
           &.input-row {
